tests/baselines/reference/specializedLambdaTypeArguments.errors.txt
specializedLambdaTypeArguments.ts(2,2): error TS2564: Property 'prop' has no initializer and is not definitely assigned in the constructor.


==== specializedLambdaTypeArguments.ts (1 errors) ====
    class X<A> {
    	prop: X< <Tany>() => Tany >;
    	~~~~
!!! error TS2564: Property 'prop' has no initializer and is not definitely assigned in the constructor.
    }
    var a: X<boolean>;
     
    